--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -82,6 +82,14 @@ Existen numerosos tipos de algoritmos de clasificación, a continuación se indica
 	\item KNN (K-Nearest Neighbour): Este algoritmo se basa en la aplicación de una métrica que establezca la similitud entre un documento que se quiere clasificar y cada uno de los documentos de entrenamiento. La clase o categoría que se asigna al documento sería la categoría del documento más cercano según la métrica establecida.
 \end{itemize}
 
+%Random forest (Breiman, 2001) is an ensemble of unpruned classification or regression trees, induced from
+%bootstrap samples of the training data, using random feature selection in the tree induction process. Prediction is made by aggregating (majority vote for classification or averaging for regression) the predictions of
+%the ensemble. Random forest generally exhibits a substantial performance improvement over the single tree
+%classifier such as CART and C4.5. It yields generalization error rate that compares favorably to Adaboost,
+%yet is more robust to noise. However, similar to most classifiers, RF can also suffer from the curse of learning from an extremely imbalanced training data set. As it is constructed to minimize the overall error rate, it
+%will tend to focus more on the prediction accuracy of the majority class, which often results in poor accuracy
+%for the minority class. To alleviate the problem, we propose two solutions: balanced random forest (BRF)
+%and weighted random forest (WRF).
 
 \section{Detección de lenguaje o discurso del odio (\textbf{\textit{hate speech detection}}) }
 \label{sec:Ejemplo_seccion}
