--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -315,4 +315,11 @@
   year      = {1960},
 }
 
+@InProceedings{shap,
+  author    = {Strumbelj, Erik, and Igor Kononenko},
+  title     = {Explaining prediction models and individual predictions with feature contributions},
+  booktitle = {Knowledge and information systems 41.3},
+  year      = {2014},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
